--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,15 @@ language: scala
 
 sudo: false
 
+scala:
+  - 2.12.1
+  - 2.11.8
+
 jdk:
   - oraclejdk8
+
+env:
+  - TRAVIS_NODE_VERSION="6"
 
 cache:
   directories:
@@ -14,10 +21,6 @@ before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
-
-scala:
-  - 2.12.1
-  - 2.11.8
 
 script:
   - sbt ++$TRAVIS_SCALA_VERSION tests/test
