--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
 - sbt ++$TRAVIS_SCALA_VERSION tests/test
 
 after_success:
-- sbt '; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish'
+- sbt "; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish"
 
 env:
   global:
