--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ script:
 - sbt ++$TRAVIS_SCALA_VERSION tests/test
 
 after_success:
-- sbt "; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish"
+- test "$TRAVIS_BRANCH" = "master" &&
+  test "$TRAVIS_PULL_REQUEST" = "false" &&
+  'sbt "; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish"
 
 env:
   global:
