--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 after_success:
 - test "$TRAVIS_BRANCH" = "master" &&
   test "$TRAVIS_PULL_REQUEST" = "false" &&
-  'sbt "; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish"
+  sbt "; ++$TRAVIS_SCALA_VERSION; core/publish; scalatags-ext/publish"
 
 env:
   global:
